--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
 	<script src="scripts/common.js" type="text/javascript"></script>
 	<script src="scripts/product.js" type="text/javascript"></script>
 	<script src="scripts/server/BaseServer.js"></script>
-	<script src="scripts/detail.js" type="text/javascript"></script>
+	<script src="scripts/server/RoleServer/detail.js" type="text/javascript"></script>
 	<style>
 		.btn {
 			width: 50%;
