--- a/list.html
+++ b/list.html
@@ -13,7 +13,8 @@
 	<script src="scripts/jquery.js" type="text/javascript"></script>
 	<script src="scripts/common.js" type="text/javascript"></script>
 	<script src="scripts/server/BaseServer.js"></script>
-	<script src="scripts/list.js" type="text/javascript"></script>
+	<script src="scripts/server/RoleServer/list.js" type="text/javascript"></script>
+	
 	<style>
 		.btn {
 			width: 50%;
